[package]
name = "reclick"
version = "0.1.1"
edition = "2018"
description = "Recorder and replayer of mouse clicks."
license = "MIT"
repository = "https://github.com/furidosu/reclick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2"
tfc = "0.6"
